--- a/app/src/main/res/values/msgs_menu.xml
+++ b/app/src/main/res/values/msgs_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="msgs_menu_log_management">Manage log file</string>
+	<string name="msgs_menu_log_management">Log management</string>
 	<string name="msgs_menu_about">About application</string>
 	<string name="msgs_menu_settings">Settings</string>
 	<string name="msgs_menu_open_zip">Open ZIP file</string>
