--- a/app/src/main/res/xml/settings_frag_compress.xml
+++ b/app/src/main/res/xml/settings_frag_compress.xml
@@ -11,5 +11,9 @@
 			android:dialogTitle="@string/settings_zip_default_encoding_dialog_title"
 			android:entries="@array/settings_zip_default_encoding_list_entries"
 			android:entryValues="@array/settings_zip_default_encoding_list_values"/>
-	    	    	    	    	    	    	    
+        <CheckBoxPreference
+            android:key="@string/settings_suppress_add_external_storage_notification"
+            android:title="@string/settings_suppress_add_external_storage_notification_title"
+            android:summary="@string/settings_suppress_add_external_storage_notification_summary_ena" />
+
 </PreferenceScreen>
