--- a/app/src/main/res/layout-large/main_dialog_progress_spin.xml
+++ b/app/src/main/res/layout-large/main_dialog_progress_spin.xml
@@ -11,6 +11,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginTop="5dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal" >
 
         <ProgressBar
