--- a/app/src/main/res/layout-large-land/custom_tree_file_list_item.xml
+++ b/app/src/main/res/layout-large-land/custom_tree_file_list_item.xml
@@ -67,7 +67,8 @@
                     android:layout_marginRight="5dp"
                     android:fontFamily="monospace"
                     android:gravity="right"
-                    android:text="xx item" />
+                    android:text="xx item"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
                 <TextView
                     android:id="@+id/tree_file_list_size"
@@ -76,7 +77,8 @@
                     android:layout_marginRight="5dp"
                     android:fontFamily="monospace"
                     android:gravity="right"
-                    android:text="size" />
+                    android:text="size"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -89,14 +91,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
-                        android:text="2018/12/31" />
+                        android:text="2018/12/31"
+                        android:textAppearance="?android:attr/textAppearanceSmall"/>
 
                     <TextView
                         android:id="@+id/tree_file_list_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
-                        android:text="xx:xx:xx" />
+                        android:text="xx:xx:xx"
+                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
