--- a/app/src/main/res/layout/custom_tree_file_list_item.xml
+++ b/app/src/main/res/layout/custom_tree_file_list_item.xml
@@ -63,15 +63,17 @@
                     android:gravity="right"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="xx item"/>
+                    android:text="xx item"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                 <TextView
                     android:id="@+id/tree_file_list_size"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
+                    android:layout_weight="1"
                     android:gravity="right"
                     android:layout_marginRight="5dp"
-                    android:text="size"/>
+                    android:text="size"
+                    android:textAppearance="?android:attr/textAppearanceSmall"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -83,14 +85,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
-                        android:text="2018/12/31" />
+                        android:text="2018/12/31"
+                        android:textAppearance="?android:attr/textAppearanceSmall"/>
 
                     <TextView
                         android:id="@+id/tree_file_list_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
-                        android:text="xx:xx:xx" />
+                        android:text="xx:xx:xx"
+                        android:textAppearance="?android:attr/textAppearanceSmall"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
