--- a/app/src/main/res/layout/main_dialog_progress_spin.xml
+++ b/app/src/main/res/layout/main_dialog_progress_spin.xml
@@ -38,7 +38,7 @@
                 android:text=""
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
-            <TextView
+            <com.sentaroh.android.Utilities3.Widget.NonWordwrapTextView
                 android:id="@+id/main_dialog_progress_spin_syncmsg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
