タブレット端末で圧縮率と圧縮方法を表示するようにした。

--- a/app/src/main/res/layout-xlarge/custom_tree_file_list_item.xml
+++ b/app/src/main/res/layout-xlarge/custom_tree_file_list_item.xml
@@ -68,6 +68,15 @@
                     android:gravity="right"
                     android:text="xx item"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
+                <TextView
+                    android:id="@+id/tree_file_list_zip_comp_info"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:text="xxx% DEFLATE64"
+                    android:textAppearance="?android:attr/textAppearanceMedium"/>
 
                 <TextView
                     android:id="@+id/tree_file_list_size"
