--- a/app/src/main/res/values/msgs_main.xml
+++ b/app/src/main/res/values/msgs_main.xml
@@ -121,8 +121,8 @@ External Library:\n
 	<string name="msgs_zip_local_folder_empty">Folder is empty.</string>
 	<string name="msgs_zip_zip_file_info" formatted="false">Size=%s, Items=%s, Encoding=%s</string>
     <string name="msgs_zip_zip_file_info_temporary">Readonly ZIP file</string>
-	<string name="msgs_zip_zip_item_property_file" formatted="false">Last modified time=%s\nCompress Method=%s\nEncryption Method=%s\nCompressed size=%,d\nUncmpress size=%,d</string>
-	<string name="msgs_zip_zip_item_property_directory" formatted="false">Item count=%s\nCompressed size=%,d\nUncmpress size=%,d</string>
+	<string name="msgs_zip_zip_item_property_file" formatted="false">Last modified time=%s\nCompress Method=%s\nEncryption Method=%s\nCompressed size=%,d\nUncmpress size=%,d\nCompression ratio=%d%%</string>
+	<string name="msgs_zip_zip_item_property_directory" formatted="false">Item count=%s\nCompressed size=%,d\nUncmpress size=%,d\nCompression ratio=%d%%</string>
 	<string name="msgs_zip_zip_item_property_encrypted_yes">Yes</string>
 	<string name="msgs_zip_zip_item_property_encrypted_no">No</string>
 
