Tab制御をTabLayoutに変更

--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -1,68 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:ignore="ButtonStyle,RtlHardcoded" >
   
-	<TabHost 
-	    android:id="@android:id/tabhost"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
-	    android:visibility="visible"
-	    tools:ignore="HardcodedText,UselessParent" >
-	
-	    <LinearLayout
-	        android:id="@+id/main_screen_view"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent"
-			android:orientation="vertical" >
-	
-	        <TabWidget
-	            android:id="@android:id/tabs"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"
-	            />
-	        
-	        <FrameLayout
-	            android:id="@android:id/tabcontent"
-	            android:layout_width="0dp"
-	            android:layout_height="0dp" >
-	        </FrameLayout>
+<!--	<TabHost -->
+<!--	    android:id="@android:id/tabhost"-->
+<!--	    android:layout_width="fill_parent"-->
+<!--	    android:layout_height="fill_parent"-->
+<!--	    android:visibility="visible"-->
+<!--	    tools:ignore="HardcodedText,UselessParent" >-->
+<!--	-->
+<!--	    <LinearLayout-->
+<!--	        android:id="@+id/main_screen_view"-->
+<!--	        android:layout_width="fill_parent"-->
+<!--	        android:layout_height="fill_parent"-->
+<!--			android:orientation="vertical" >-->
+<!--	-->
+<!--	        <TabWidget-->
+<!--	            android:id="@android:id/tabs"-->
+<!--	            android:layout_width="fill_parent"-->
+<!--	            android:layout_height="wrap_content"-->
+<!--	            />-->
+<!--	        -->
+<!--	        <FrameLayout-->
+<!--	            android:id="@android:id/tabcontent"-->
+<!--	            android:layout_width="0dp"-->
+<!--	            android:layout_height="0dp" >-->
+<!--	        </FrameLayout>-->
 
-	        <com.sentaroh.android.Utilities3.Widget.CustomViewPager
-	            android:id="@+id/main_screen_pager"
-	            android:layout_width="fill_parent"
-	            android:layout_height="0dp"
-	            android:layout_weight="1"/>
+<!--	        <com.sentaroh.android.Utilities3.Widget.CustomViewPager-->
+<!--	            android:id="@+id/main_screen_pager"-->
+<!--	            android:layout_width="fill_parent"-->
+<!--	            android:layout_height="0dp"-->
+<!--	            android:layout_weight="1"/>-->
 
-	        <LinearLayout
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content" >
-	
-	            <Button
-	                android:id="@+id/main_screen_copy_cut_clear_btn"
-	                style="?android:attr/buttonStyleSmall"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_gravity="center_vertical"
-	                android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />
-	
-	            <Button
-	                android:id="@+id/main_screen_copy_cut_item"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_gravity="center_vertical"
-	                android:ellipsize="end"
-	                android:gravity="center_vertical|left"
-	                android:maxLines="2"
-	                android:text="Copy: ......"
-	                android:textAppearance="?android:attr/textAppearanceSmall" />
-	
-	        </LinearLayout>
-	        	        	        	        
-	    </LinearLayout>
-	</TabHost>
-	
+<!--	        <LinearLayout-->
+<!--	            android:layout_width="match_parent"-->
+<!--	            android:layout_height="wrap_content" >-->
+<!--	-->
+<!--	            <Button-->
+<!--	                android:id="@+id/main_screen_copy_cut_clear_btn"-->
+<!--	                style="?android:attr/buttonStyleSmall"-->
+<!--	                android:layout_width="wrap_content"-->
+<!--	                android:layout_height="wrap_content"-->
+<!--	                android:layout_gravity="center_vertical"-->
+<!--	                android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />-->
+<!--	-->
+<!--	            <Button-->
+<!--	                android:id="@+id/main_screen_copy_cut_item"-->
+<!--	                android:layout_width="match_parent"-->
+<!--	                android:layout_height="wrap_content"-->
+<!--	                android:layout_gravity="center_vertical"-->
+<!--	                android:ellipsize="end"-->
+<!--	                android:gravity="center_vertical|left"-->
+<!--	                android:maxLines="2"-->
+<!--	                android:text="Copy: ......"-->
+<!--	                android:textAppearance="?android:attr/textAppearanceSmall" />-->
+<!--	-->
+<!--	        </LinearLayout>-->
+<!--	        	        	        	        -->
+<!--	    </LinearLayout>-->
+<!--	</TabHost>-->
+
+    <LinearLayout
+        android:id="@+id/main_screen_view"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical" >
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/main_screen_tab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="@color/colorTurquoise"
+            app:tabIndicatorHeight="5dp"
+            app:tabBackground="@drawable/tab_bg_selector"
+            app:tabTextColor="@color/tab_textcolor_selector"
+            app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:tabMaxWidth="0dp"
+            app:tabGravity="fill"
+            app:tabMode="fixed" />
+
+        <com.sentaroh.android.Utilities3.Widget.CustomViewPager
+            android:id="@+id/main_screen_pager"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <Button
+                android:id="@+id/main_screen_copy_cut_clear_btn"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:text="@string/msgs_zip_local_file_clear_copy_cut_item" />
+
+            <Button
+                android:id="@+id/main_screen_copy_cut_item"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:ellipsize="end"
+                android:gravity="center_vertical|left"
+                android:maxLines="2"
+                android:text="Copy: ......"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 </LinearLayout>    
