--- a/app/src/main/res/layout/about_dialog.xml
+++ b/app/src/main/res/layout/about_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
@@ -20,48 +21,43 @@
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </LinearLayout>
-    
-	<TabHost
-	    android:id="@+id/about_tab_host"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent">
-	
-	    <LinearLayout
-	        android:orientation="vertical"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        >
-	        
-		  	<TabWidget
-	            android:id="@android:id/tabs"
-	            android:layout_width="fill_parent"
-	            android:layout_height="wrap_content"/>
-	
-	       	<FrameLayout
-	            android:id="@android:id/tabcontent"
-	            android:layout_width="0dp"
-	            android:layout_height="0dp">
-	    	</FrameLayout>
 
-            <com.sentaroh.android.Utilities3.Widget.CustomViewPager
-	            android:id="@+id/about_view_pager"
-	            android:layout_width="fill_parent"
-	            android:layout_height="0dp"
-	            android:layout_marginLeft="0dp"
-	            android:layout_marginRight="0dp"
-	            android:layout_weight="1"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-		    <Button
-		        android:id="@+id/about_dialog_btn_ok"
-		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content"
-		        android:text="@string/msgs_common_dialog_close"
-                android:textAppearance="@android:style/TextAppearance.Large"/>
-	        	        	       		    	
-	    </LinearLayout>
-	    
-	</TabHost>
-    
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/about_tab_view"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="@color/colorTurquoise"
+            app:tabIndicatorHeight="5dp"
+            app:tabBackground="@drawable/tab_bg_selector"
+            app:tabTextColor="@color/tab_textcolor_selector"
+            app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:tabMaxWidth="0dp"
+            app:tabGravity="fill"
+            app:tabMode="fixed" />
+
+        <com.sentaroh.android.Utilities3.Widget.CustomViewPager
+            android:id="@+id/about_view_pager"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/about_dialog_btn_ok"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/msgs_common_dialog_close"
+            android:textAppearance="@android:style/TextAppearance.Large"/>
+
+    </LinearLayout>
+
 </LinearLayout>
 
 
