ListEditPreference変更の取り込み

--- a/app/src/main/res/values-fr/String_fr.xml
+++ b/app/src/main/res/values-fr/String_fr.xml
@@ -100,8 +100,8 @@
         <string name="msgs_zip_folder_not_specified">Le fichier ZIP n\'a pas été chargé.</string>
         <string name="msgs_zip_zip_folder_empty">Le dossier est vide.</string>
         <string name="msgs_zip_local_folder_empty">Le dossier est vide.</string>
-        <string name="msgs_zip_zip_file_info">Taille=%s, Articles=%s, Encodage=%s</string>
-        <string name="msgs_zip_zip_file_info_temporary" formatted="false">Fichier ZIP en lecture seule</string>
+        <string name="msgs_zip_zip_file_info" formatted="false">Taille=%s, Articles=%s, Encodage=%s</string>
+        <string name="msgs_zip_zip_file_info_temporary">Fichier ZIP en lecture seule</string>
         <string name="msgs_zip_zip_item_property_file" formatted="false">Dernière modification = %s\nMéthode de compression = %s\nMéthode de cryptage = %s\nTaille de compression = %,d\nTaille de décompression = %,d\nRapport de compression = %d%%%</string>
         <string name="msgs_zip_zip_item_property_directory" formatted="false">Nombre d\'articles = %s\nTaille comprimée = %,d\nTaille non comprimée = %,d\nRapport de compression = %d%%%</string>
         <string name="msgs_zip_zip_item_property_encrypted_yes">Oui</string>
@@ -244,6 +244,7 @@
         <string name="settings_main_title">Paramètres</string>
         <string name="settings_compress_title">Compresser</string>
         <string name="settings_no_compress_file_type_title">Type de fichier sans compression</string>
+        <string name="settings_no_compress_file_type_hint">Type de fichier</string>
         <string name="settings_no_compress_file_type">settings_no_compress_file_type</string>
         <string name="settings_zip_default_encoding_title">Encodage en cas d\'échec de la détection automatique</string>
         <string name="settings_zip_default_encoding_dialog_title">Sélectionner le codage</string>
