--- a/app/src/main/res/values-ja/string_ja.xml
+++ b/app/src/main/res/values-ja/string_ja.xml
@@ -100,8 +100,8 @@
         <string name="msgs_zip_folder_not_specified">ZIPファイルが読み込まれていません。</string>
         <string name="msgs_zip_zip_folder_empty">フォルダーは空です。</string>
         <string name="msgs_zip_local_folder_empty">フォルダーは空です。</string>
-        <string name="msgs_zip_zip_file_info">サイズ=%s, 項目=%s, 文字コード=%s</string>
-        <string name="msgs_zip_zip_file_info_temporary" formatted="false">書込不可ZIPファイル</string>
+        <string name="msgs_zip_zip_file_info" formatted="false">サイズ=%s, 項目=%s, 文字コード=%s</string>
+        <string name="msgs_zip_zip_file_info_temporary">書込不可ZIPファイル</string>
         <string name="msgs_zip_zip_item_property_file" formatted="false">最終更新日時=%s\n圧縮方法=%s\n暗号方式=%s\n圧縮後サイズ=%,d\n圧縮前サイズ=%,d\n圧縮率=%d%%</string>
         <string name="msgs_zip_zip_item_property_directory" formatted="false">項目数=%s\n圧縮後サイズ=%,d\n圧縮前サイズ=%,d\n圧縮率=%d%%</string>
         <string name="msgs_zip_zip_item_property_encrypted_yes">有り</string>
@@ -244,6 +244,7 @@
         <string name="settings_main_title">設定</string>
         <string name="settings_compress_title">圧縮</string>
         <string name="settings_no_compress_file_type_title">圧縮しないファイルタイプ</string>
+        <string name="settings_no_compress_file_type_hint">ファイルタイプ</string>
         <string name="settings_no_compress_file_type">settings_no_compress_file_type</string>
         <string name="settings_zip_default_encoding_title">自動判別失敗時のエンコーディング</string>
         <string name="settings_zip_default_encoding_dialog_title">エンコーディングの選択</string>
